--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "klasemenjs",
   "version": "1.0.0",
   "description": "contoh membuat klasemen real time dengan Node, hapi dan RethinkDB",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Adityo Pratomo",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lunchboxav/klasemen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lunchboxav/klasemen.git/issues"
+  },
   "dependencies": {
     "handlebars": "^4.0.5",
     "hapi": "^15.1.1",
